--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <br><br>Entre e Jogue Com Seus Amigos.
                 </p>
                 <div class="buttons">
-                    <button class="copy-ip">Copiar IP</button>
+                    <button class="copy-ip">Copiar IP Java</button>
+                    <a href="minecraft:?addExternalServer=Dolynho|bedrock.dollynho.work.gd:19132"><button class="copy-ip">Entrar No Bedrock</button></a>
                     <a href="#about"><button class="how-to-join">Mostrar Mais</button></a>
                 </div>
                 <p class="ip-copied">IP Copiado</p>
